--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                 <p>
                   Currently, I am a Ph.D. student at <a href="https://www.stanford.edu/">Stanford</a>. I am extremely fortunate to be advised by Prof. <a href="https://web.stanford.edu/~montanar/">Andrea Montanari</a>.
                   <br>
-                  I also work closely with Prof. <a href="https://jasondlee88.github.io/">Jason D. Lee</a>.
+                  I also work closely with Prof. <a href="https://jasondlee88.github.io/">Jason D. Lee</a> (at <a href="https://www.berkeley.edu/">Berkeley</a>).
                 </p>
                 <p>
-                  I received my B.S. in Mathematics from <a href="https://english.pku.edu.cn/">Peking University</a> in 2024. Previously, I was fortunate to be advised by Prof. <a href="https://jasondlee88.github.io/">Jason D. Lee</a> and Prof. <a href="https://leiwu0.github.io/">Lei Wu</a> for my undergraduate research.
+                  Previously, I received my B.S. in Mathematics from <a href="https://english.pku.edu.cn/">Peking University</a> in 2024. I visited <a href="https://www.princeton.edu/">Princeton</a> in 2023.  I was fortunate to be advised by Prof. <a href="https://jasondlee88.github.io/">Jason D. Lee</a> and Prof. <a href="https://leiwu0.github.io/">Lei Wu</a> for my undergraduate research.
                 </p>
                 <p>
                   I am also open to discussion for other interesting topics. If you are interested in connecting with me, please feel free to reach out.
