--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
                 <p style="text-align:center">
                   zihaow [at] stanford.edu &nbsp;/&nbsp; <a href="https://scholar.google.com/citations?user=GMvmr8QAAAAJ&hl=en">Google Scholar</a> &nbsp;/&nbsp; <a href="data/CV.pdf">CV</a>
                 </p>
-                <p>
+                <p style="margin-top:0px;margin-bottom:15px;">
                   I am interested in the theory (and algorithms) of modern machine learning.
                 </p>
-                <p>
+                <p style="margin-bottom:15px;">
                   Currently, I am a Ph.D. student at <a href="https://www.stanford.edu/">Stanford</a>. I am extremely fortunate to be advised by Prof. <a href="https://web.stanford.edu/~montanar/">Andrea Montanari</a>.
                   <br>
                   I also work closely with Prof. <a href="https://jasondlee88.github.io/">Jason D. Lee</a> (at <a href="https://www.berkeley.edu/">Berkeley</a>).
                 </p>
-                <p>
+                <p style="margin-bottom:15px;">
                   Previously, I received my B.S. in Mathematics from <a href="https://english.pku.edu.cn/">Peking University</a> in 2024. I visited <a href="https://www.princeton.edu/">Princeton</a> in 2023.  I was fortunate to be advised by Prof. <a href="https://jasondlee88.github.io/">Jason D. Lee</a> and Prof. <a href="https://leiwu0.github.io/">Lei Wu</a> for my undergraduate research.
                 </p>
-                <p>
-                  I am also open to discussion for other interesting topics. If you are interested in connecting with me, please feel free to reach out.
+                <p style="margin-bottom:0px;">
+                  I am also open to discussion for other interesting topics. If you are interested in connecting with me, please feel free to reach out!
         </p>
       </td>
               <td style="padding:2.5%;width:37%;max-width:37%">
@@ -49,7 +49,7 @@
           <!-- Publications -->
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
-              <td style="padding:20px;width:100%;vertical-align:middle">
+              <td style="padding:50px 20px 20px 20px;width:100%;vertical-align:middle">
                 <h2 style="margin-bottom:5px;">Publications</h2>
                 <p style="margin-top:0px;margin-bottom:0px;font-size:14px;color:#666;">* indicates equal contribution or alphabetical author order. Representative papers are <span style="background-color:#ffffd0;">highlighted</span>.</p>
       </td>
@@ -76,75 +76,75 @@
                 <strong>Bohan Zhang*</strong>, <strong>Zihao Wang*</strong>, Hengyu Fu, Jason D. Lee
                 <br>
                 <em>Submitted and under review</em>, arXiv:2511.15120 / <a href="https://arxiv.org/abs/2511.15120">paper</a>
-      </td>
-    </tr>
+              </td>
+            </tr>
 
             <tr>
               <td style="padding:10px 20px;width:100%;vertical-align:middle">
                 <a href="https://arxiv.org/abs/2508.17580">
                   <papertitle>UQ: Assessing Language Models on Unsolved Questions</papertitle>
-        </a>
-        <br>
+                </a>
+                <br>
                 Fan Nie*, Ken Ziyu Liu*, <strong>Zihao Wang</strong>, Rui Sun, Wei Liu, Weijia Shi, Huaxiu Yao, Linjun Zhang, Andrew Y. Ng, James Zou, Sanmi Koyejo, Yejin Choi, Percy Liang, Niklas Muennighoff*
                 <br>
                 <em>Submitted and under review</em>, arXiv:2508.17580 / <a href="https://arxiv.org/abs/2508.17580">paper</a>
-      </td>
-    </tr>
+              </td>
+            </tr>
 
             <tr>
               <td style="padding:10px 20px;width:100%;vertical-align:middle">
                 <a href="https://arxiv.org/abs/2411.17201">
                   <papertitle>Learning Hierarchical Polynomials of Multiple Nonlinear Features with Three-Layer Networks</papertitle>
-        </a>
-        <br>
+                </a>
+                <br>
                 Hengyu Fu, <strong>Zihao Wang</strong>, Eshaan Nichani, Jason Lee
                 <br>
                 <em>ICLR</em>, 2025, arXiv:2411.17201 / <a href="https://arxiv.org/abs/2411.17201">paper</a>
-      </td>
-    </tr>
+              </td>
+            </tr>
 
             <tr>
               <td style="padding:10px 20px;width:100%;vertical-align:middle">
                 <a href="https://arxiv.org/abs/2311.15221">
                   <papertitle>The Local Landscape of Phase Retrieval Under Limited Samples</papertitle>
-        </a>
-        <br>
+                </a>
+                <br>
                 <strong>Kaizhao Liu*</strong>, <strong>Zihao Wang*</strong>, Lei Wu
                 <br>
                 <em>IEEE Transactions on Information Theory</em>, arXiv:2311.15221 / <a href="https://arxiv.org/abs/2311.15221">paper</a>
-      </td>
-    </tr>
+              </td>
+            </tr>
 
             <tr>
               <td style="padding:10px 20px;width:100%;vertical-align:middle">
                 <a href="https://arxiv.org/abs/2311.13774">
                   <papertitle>Learning Hierarchical Polynomials with Three-Layer Neural Networks</papertitle>
-        </a>
-        <br>
+                </a>
+                <br>
                 <strong>Zihao Wang</strong>, Eshaan Nichani, Jason Lee
                 <br>
                 <em>ICLR</em>, 2024, arXiv:2311.13774 / <a href="https://arxiv.org/abs/2311.13774">paper</a>
-      </td>
-    </tr>
+              </td>
+            </tr>
 
             <tr>
               <td style="padding:10px 20px;width:100%;vertical-align:middle">
                 <a href="https://arxiv.org/abs/2305.08404">
                   <papertitle>Theoretical Analysis of the Inductive Biases in Deep Convolutional Networks</papertitle>
-        </a>
-        <br>
+                </a>
+                <br>
                 <strong>Zihao Wang</strong>, Lei Wu
                 <br>
                 <em>NeurIPS</em>, 2023, arXiv:2305.08404 / <a href="https://arxiv.org/abs/2305.08404">paper</a>
-      </td>
-    </tr>
+              </td>
+            </tr>
 
           </tbody></table>
 
           <!-- Awards -->
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
-              <td style="padding:20px;width:100%;vertical-align:middle">
+              <td style="padding:50px 20px 20px 20px;width:100%;vertical-align:middle">
                 <h2 style="margin-bottom:10px;">Selected Awards</h2>
                 <p style="display:flex;justify-content:space-between;margin-bottom:8px;">
                   <span>Weiming Scholar, Peking University</span>
@@ -154,18 +154,33 @@
                   <span>Francis Robbins Upton Fellowship (declined), Princeton University</span>
                   <span>2024</span>
                 </p>
-      </td>
-    </tr>
+              </td>
+            </tr>
           </tbody></table>
 
           <!-- Talks -->
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
-              <td style="padding:20px;width:100%;vertical-align:middle">
-                <h2 style="margin-bottom:10px;">Selected Talks</h2>
+              <td style="padding:20px 20px 20px 20px;width:100%;vertical-align:middle">
+                <h2 style="margin-bottom:10px;">Selected Presentations</h2>
                 <p style="display:flex;justify-content:space-between;margin-bottom:8px;">
                   <span>ML theory reading group, Tsinghua University</span>
                   <span>December 2025</span>
+                </p>
+              </td>
+            </tr>
+          </tbody></table>
+
+          <!-- Miscellaneous -->
+          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+            <tr>
+              <td style="padding:20px 20px 20px 20px;width:100%;vertical-align:middle">
+                <h2 style="margin-bottom:10px;">Miscellaneous</h2>
+                <p>
+                  I love travelling and want to explore places off the beaten path. One of my favorite books is <a href="https://www.amazon.com/Art-Travel-Alain-Botton/dp/0375725342"><em>The Art of Travel</em></a> by <a href="https://alaindebotton.com/">Alain de Botton</a>.
+                </p>
+                <p>
+                  I also take some pictures in a rather amateur manner. Some examples are <a href="images/travel2.jpg">here</a> and <a href="images/travel3.jpg">here</a>.
                 </p>
               </td>
             </tr>
