--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                   zihaow [at] stanford.edu &nbsp;/&nbsp; <a href="https://scholar.google.com/citations?user=GMvmr8QAAAAJ&hl=en">Google Scholar</a> &nbsp;/&nbsp; <a href="data/CV.pdf">CV</a>
                 </p>
                 <p style="margin-top:0px;margin-bottom:15px;">
-                  I am interested in the theory (and algorithms) of modern machine learning.
+                  I am interested in understanding (and optimizing) the mechanisms of modern machine learning.
                 </p>
                 <p style="margin-bottom:15px;">
                   Currently, I am a Ph.D. student at <a href="https://www.stanford.edu/">Stanford</a>. I am extremely fortunate to be advised by Prof. <a href="https://web.stanford.edu/~montanar/">Andrea Montanari</a>.
@@ -37,7 +37,7 @@
                   Previously, I received my B.S. in Mathematics from <a href="https://english.pku.edu.cn/">Peking University</a> in 2024. I visited <a href="https://www.princeton.edu/">Princeton</a> in 2023.  I was fortunate to be advised by Prof. <a href="https://jasondlee88.github.io/">Jason D. Lee</a> and Prof. <a href="https://leiwu0.github.io/">Lei Wu</a> for my undergraduate research.
                 </p>
                 <p style="margin-bottom:0px;">
-                  I am also open to discussion for other interesting topics. If you are interested in connecting with me, please feel free to reach out!
+                  I am open to discussions on other interesting topics. If you are interested in connecting with me, please feel free to reach out!
         </p>
       </td>
               <td style="padding:2.5%;width:37%;max-width:37%">
