--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@
                 </p>
                 <p style="margin-bottom:15px;">
                   Currently, I am a Ph.D. student at <a href="https://www.stanford.edu/">Stanford</a>. I am extremely fortunate to be advised by Prof. <a href="https://web.stanford.edu/~montanar/">Andrea Montanari</a>.
-                  <br>
-                  I also work closely with Prof. <a href="https://jasondlee88.github.io/">Jason D. Lee</a> (at <a href="https://www.berkeley.edu/">Berkeley</a>).
                 </p>
                 <p style="margin-bottom:15px;">
-                  Previously, I received my B.S. in Mathematics from <a href="https://english.pku.edu.cn/">Peking University</a> in 2024. I visited <a href="https://www.princeton.edu/">Princeton</a> in 2023.  I was fortunate to be advised by Prof. <a href="https://jasondlee88.github.io/">Jason D. Lee</a> and Prof. <a href="https://leiwu0.github.io/">Lei Wu</a> for my undergraduate research.
+                  I also work closely with Prof. <a href="https://jasondlee88.github.io/">Jason D. Lee</a> (at <a href="https://www.berkeley.edu/">Berkeley</a>).<br>
+                  Previously, I received my B.S. in Mathematics from <a href="https://english.pku.edu.cn/">Peking University</a> in 2024. I visited <a href="https://www.princeton.edu/">Princeton</a> in 2023. I was fortunate to be advised by Prof. <a href="https://jasondlee88.github.io/">Jason D. Lee</a> and Prof. <a href="https://leiwu0.github.io/">Lei Wu</a> for my undergraduate research.
                 </p>
                 <p style="margin-bottom:0px;">
                   I am open to discussions on other interesting topics. If you are interested in connecting with me, please feel free to reach out!
