--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                   I love travelling and want to explore places off the beaten path. One of my favorite books is <a href="https://www.amazon.com/Art-Travel-Alain-Botton/dp/0375725342"><em>The Art of Travel</em></a> by <a href="https://alaindebotton.com/">Alain de Botton</a>. One of my favorite movies is <a href="https://www.imdb.com/title/tt9770150/"><em>Nomadland</em></a> by <a href="https://en.wikipedia.org/wiki/Chlo%C3%A9_Zhao">Chloé Zhao</a>.
                 </p>
                 <p>
-                  I am proud to be born and raised in <a href="https://en.wikipedia.org/wiki/Qingdao">Qingdao</a>, a coastal city where I grew up just a stone's throw from the sea. I also take pictures from time to time in an amateur manner. Some examples are <a href="images/qingdao_lighthouse.jpg">here</a> and <a href="images/evening_lights.jpg">here</a>.
+                  I am proud to be born and raised in <a href="https://en.wikipedia.org/wiki/Qingdao">Qingdao</a>, a coastal city where I grew up just a stone's throw from the sea. I also take (non-portrait) pictures from time to time in an amateur manner. Some examples are <a href="images/qingdao_lighthouse.jpg">here</a> and <a href="images/evening_lights.jpg">here</a>.
                 </p>
               </td>
             </tr>
