--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                   Zihao Wang
                 </p>
                 <p style="text-align:center">
-                  zihaow [at] stanford.edu &nbsp;/&nbsp; <a href="https://scholar.google.com/citations?user=GMvmr8QAAAAJ&hl=en">Google Scholar</a> &nbsp;/&nbsp; <a href="data/CV.pdf">CV</a>
+                  <a href="https://scholar.google.com/citations?user=GMvmr8QAAAAJ&hl=en">Google Scholar</a>
                 </p>
                 <p style="margin-top:0px;margin-bottom:15px;">
                   I am interested in understanding (and optimizing) the mechanisms of modern machine learning.
