--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                   Currently, I am a Ph.D. student at <a href="https://www.stanford.edu/">Stanford</a>. I am extremely fortunate to be advised by Prof. <a href="https://web.stanford.edu/~montanar/">Andrea Montanari</a>.
                 </p>
                 <p style="margin-bottom:15px;">
-                  I also work closely with Prof. <a href="https://jasondlee88.github.io/">Jason D. Lee</a> (at <a href="https://www.berkeley.edu/">Berkeley</a>).<br>
+                  I also collaborate closely with Prof. <a href="https://jasondlee88.github.io/">Jason D. Lee</a> (at <a href="https://www.berkeley.edu/">Berkeley</a>).<br>
                   Previously, I received my B.S. in Mathematics from <a href="https://english.pku.edu.cn/">Peking University</a> in 2024. I visited <a href="https://www.princeton.edu/">Princeton</a> in 2023. I was fortunate to be advised by Prof. <a href="https://jasondlee88.github.io/">Jason D. Lee</a> and Prof. <a href="https://leiwu0.github.io/">Lei Wu</a> for my undergraduate research.
                 </p>
                 <p style="margin-bottom:0px;">
@@ -179,7 +179,7 @@
                   I love travelling and want to explore places off the beaten path. One of my favorite books is <a href="https://www.amazon.com/Art-Travel-Alain-Botton/dp/0375725342"><em>The Art of Travel</em></a> by <a href="https://alaindebotton.com/">Alain de Botton</a>. One of my favorite movies is <a href="https://www.imdb.com/title/tt9770150/"><em>Nomadland</em></a> by <a href="https://en.wikipedia.org/wiki/Chlo%C3%A9_Zhao">Chloé Zhao</a>.
                 </p>
                 <p>
-                  I am proud to be born and raised in <a href="https://en.wikipedia.org/wiki/Qingdao">Qingdao</a>, a coastal city where I grew up just a stone's throw from the sea. I also take (non-portrait) pictures from time to time in an amateur manner. Some examples are <a href="images/qingdao_lighthouse.jpg">here</a> and <a href="images/evening_lights.jpg">here</a>.
+                  I am proud to be born and raised in <a href="https://en.wikipedia.org/wiki/Qingdao">Qingdao</a>, a coastal city where I grew up just a stone's throw from the sea.
                 </p>
               </td>
             </tr>
@@ -191,7 +191,7 @@
               <td style="padding:0px">
                 <br>
                 <p style="text-align:center;font-size:small;">
-                  Updated at November 2025
+                  Updated at December 2025
                 </p>
                 <p style="text-align:center;font-size:small;">
                   Thanks <a href="https://jonbarron.info">Jon Barron</a> for this amazing template
