Add upcoming presentations on feature learning in neural networks

--- a/index.html
+++ b/index.html
@@ -162,6 +162,19 @@
             <tr>
               <td style="padding:20px 20px 20px 20px;width:100%;vertical-align:middle">
                 <h2 style="margin-bottom:10px;">Selected Presentations</h2>
+                <p style="margin-bottom:8px;margin-top:5px;font-style:italic;color:#555;">Feature learning in neural networks</p>
+                <p style="display:flex;justify-content:space-between;margin-bottom:8px;">
+                  <span>TBD, Flatiron Institute</span>
+                  <span>March 2026</span>
+                </p>
+                <p style="display:flex;justify-content:space-between;margin-bottom:8px;">
+                  <span>TBD, New York University</span>
+                  <span>March 2026</span>
+                </p>
+                <p style="display:flex;justify-content:space-between;margin-bottom:8px;">
+                  <span>Machine learning seminar, Peking University</span>
+                  <span>December 2025</span>
+                </p>
                 <p style="display:flex;justify-content:space-between;margin-bottom:8px;">
                   <span>ML theory reading group, Tsinghua University</span>
                   <span>December 2025</span>
