Update publications: add Phase Transitions arXiv link, Bohan paper to ICLR 2026

--- a/index.html
+++ b/index.html
@@ -58,13 +58,15 @@
 
             <tr bgcolor="#ffffd0">
               <td style="padding:10px 20px;width:100%;vertical-align:middle">
-                <papertitle>Phase Transitions for Feature Learning in Neural Networks</papertitle>
-        <br>
+                <a href="https://arxiv.org/abs/2602.01434">
+                  <papertitle>Phase Transitions for Feature Learning in Neural Networks</papertitle>
+                </a>
+                <br>
                 <strong>Andrea Montanari*</strong>, <strong>Zihao Wang*</strong>
                 <br>
-                <em>In preparation</em>
-      </td>
-    </tr>
+                arXiv:2602.01434 / <a href="https://arxiv.org/abs/2602.01434">paper</a>
+              </td>
+            </tr>
 
             <tr bgcolor="#ffffd0">
               <td style="padding:10px 20px;width:100%;vertical-align:middle">
@@ -74,7 +76,7 @@
         <br>
                 <strong>Bohan Zhang*</strong>, <strong>Zihao Wang*</strong>, Hengyu Fu, Jason D. Lee
                 <br>
-                <em>Submitted and under review</em>, arXiv:2511.15120 / <a href="https://arxiv.org/abs/2511.15120">paper</a>
+                <em>ICLR</em>, 2026, arXiv:2511.15120 / <a href="https://arxiv.org/abs/2511.15120">paper</a>
               </td>
             </tr>
 
@@ -86,7 +88,7 @@
                 <br>
                 Fan Nie*, Ken Ziyu Liu*, <strong>Zihao Wang</strong>, Rui Sun, Wei Liu, Weijia Shi, Huaxiu Yao, Linjun Zhang, Andrew Y. Ng, James Zou, Sanmi Koyejo, Yejin Choi, Percy Liang, Niklas Muennighoff*
                 <br>
-                <em>Submitted and under review</em>, arXiv:2508.17580 / <a href="https://arxiv.org/abs/2508.17580">paper</a>
+                arXiv:2508.17580 / <a href="https://arxiv.org/abs/2508.17580">paper</a>
               </td>
             </tr>
 
@@ -204,7 +206,7 @@
               <td style="padding:0px">
                 <br>
                 <p style="text-align:center;font-size:small;">
-                  Updated at December 2025
+                  Updated at February 2026
                 </p>
                 <p style="text-align:center;font-size:small;">
                   Thanks <a href="https://jonbarron.info">Jon Barron</a> for this amazing template
