Update presentation text

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                   <span>March 2026</span>
                 </p>
                 <p style="display:flex;justify-content:space-between;margin-bottom:8px;">
-                  <span>Machine learning seminar, Peking University</span>
+                  <span>ML seminar, Peking University</span>
                   <span>December 2025</span>
                 </p>
                 <p style="display:flex;justify-content:space-between;margin-bottom:8px;">
