--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                   I am interested in understanding (and optimizing) the mechanisms of modern machine learning.
                 </p>
                 <p style="margin-bottom:15px;">
-                  Currently, I am a Ph.D. student at <a href="https://www.stanford.edu/">Stanford</a>. I am extremely fortunate to be advised by Prof. <a href="https://web.stanford.edu/~montanar/">Andrea Montanari</a>.
+                  Currently, I am a Ph.D. student at <a href="https://www.stanford.edu/">Stanford</a> <a href="https://mathematics.stanford.edu/">Mathematics</a>. I am extremely fortunate to be advised by Prof. <a href="https://web.stanford.edu/~montanar/">Andrea Montanari</a>.
                 </p>
                 <p style="margin-bottom:15px;">
                   I also collaborate closely with Prof. <a href="https://jasondlee88.github.io/">Jason D. Lee</a> (at <a href="https://www.berkeley.edu/">Berkeley</a>).<br>
