Add slides link for Phase Transitions paper

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <br>
                 <strong>Andrea Montanari*</strong>, <strong>Zihao Wang*</strong>
                 <br>
-                arXiv:2602.01434 / <a href="https://arxiv.org/abs/2602.01434">paper</a>
+                arXiv:2602.01434 / <a href="https://arxiv.org/abs/2602.01434">paper</a> / <a href="slides.pdf">slides</a>
               </td>
             </tr>
 
