--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 <h2 style="margin-bottom:10px;">Selected Presentations</h2>
                 <p style="margin-bottom:8px;margin-top:5px;font-style:italic;color:#555;">Feature learning in neural networks</p>
                 <p style="display:flex;justify-content:space-between;margin-bottom:8px;">
-                  <span>TBD, Flatiron Institute</span>
+                  <span>CCM seminar, Flatiron Institute</span>
                   <span>March 2026</span>
                 </p>
                 <p style="display:flex;justify-content:space-between;margin-bottom:8px;">
