Update presentations: reorder and add Wharton UPenn talk

--- a/index.html
+++ b/index.html
@@ -166,11 +166,15 @@
                 <h2 style="margin-bottom:10px;">Selected Presentations</h2>
                 <p style="margin-bottom:8px;margin-top:5px;font-style:italic;color:#555;">Feature learning in neural networks</p>
                 <p style="display:flex;justify-content:space-between;margin-bottom:8px;">
+                  <span>TBD, New York University</span>
+                  <span>March 2026</span>
+                </p>
+                <p style="display:flex;justify-content:space-between;margin-bottom:8px;">
                   <span>CCM seminar, Flatiron Institute</span>
                   <span>March 2026</span>
                 </p>
                 <p style="display:flex;justify-content:space-between;margin-bottom:8px;">
-                  <span>TBD, New York University</span>
+                  <span>ML theory reading group, Wharton, UPenn</span>
                   <span>March 2026</span>
                 </p>
                 <p style="display:flex;justify-content:space-between;margin-bottom:8px;">
