Add slides link back and update slides PDF and presentation topic

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <br>
                 <strong>Andrea Montanari*</strong>, <strong>Zihao Wang*</strong>
                 <br>
-                arXiv:2602.01434 / <a href="https://arxiv.org/abs/2602.01434">paper</a>
+                arXiv:2602.01434 / <a href="https://arxiv.org/abs/2602.01434">paper</a> / <a href="slides.pdf">slides</a>
               </td>
             </tr>
 
@@ -164,7 +164,7 @@
             <tr>
               <td style="padding:20px 20px 20px 20px;width:100%;vertical-align:middle">
                 <h2 style="margin-bottom:10px;">Selected Presentations</h2>
-                <p style="margin-bottom:8px;margin-top:5px;font-style:italic;color:#555;">Feature learning in neural networks</p>
+                <p style="margin-bottom:8px;margin-top:5px;font-style:italic;color:#555;">Phase transitions for feature learning</p>
                 <p style="display:flex;justify-content:space-between;margin-bottom:8px;">
                   <span>TBD, New York University</span>
                   <span>March 2026</span>
